--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body{
     border-radius: 3px;
     background-color: rgba(59, 58, 58, 0.52);
 }
-#hr{
-    color: red;
+#card{
+    align-items: center;
+}
+#image{
+    width: 50px;
+    border-radius: 30rem;
+}
+p{
+    color: white;
+}
+.card-body{
+    text-align: center;
 }
